# ColorPalette

./: .gitignore  README.md  mix.exs
assets/: tailwind.config.js
assets/css/: app.css
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: test_webscrapping.ex  test_webscrapping_web.ex
lib/test_webscrapping/: ColorAnalysisOrchestrator.ex  application.ex  image_analyzer.ex  mailer.ex  repo.ex  web_scraper.ex
lib/test_webscrapping_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/test_webscrapping_web/components/: core_components.ex  layouts.ex
lib/test_webscrapping_web/components/layouts/: root.html.heex
lib/test_webscrapping_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
lib/test_webscrapping_web/controllers/page_html/: color_results.html.heex  form.html.heex  home.html.heex  results.html.heex
lib/test_webscrapping_web/live/: colorpalette_live.ex
native/ok/: Cargo.toml  README.md
native/ok/src/: lib.rs
priv/repo/: seeds.exs
test/: test_helper.exs
test/support/: conn_case.ex  data_case.ex
test/test_webscrapping_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
