[package]
name = "ok"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "ok"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.31.0"
kmeans_colors = { version = "0.6.0", default-features = false, features = ["palette_color"] }
fxhash = { version = "0.2.1", default-features = false, optional = true }
num-traits = { version = "0.2.16", default-features = false, features = ["std"], optional = true }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rand_chacha = { version = "0.3.1", default-features = false }
structopt = { version = "0.3.26", default-features = false, optional = true }
image = "0.24.9"
palette = "0.7.5"
reqwest = { version = "0.11.24", features = ["blocking"] }


